--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
     <header>
         <div class="nav-box">
             <nav class="header-nav boxed flex">
-                <div class="logo border">logo</div>
-                <div class="links border">link link link link</div>
-                <div class="login border">login</div>
+                <div class="nav-logo flex">
+                    <img src="./img/logo.svg" alt="">
+                </div>
+
+                <ul class="nav-links flex">
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+
+                <div class="nav-login flex">
+                    <button class="button">Accedi</button>
+                </div>
             </nav>
 
-            <div class="bg-blue flex">
-                <div class="boxed purple-box border"></div>
+            <div class="jumbotron-container flex">
+                <img class="jumbotron" src="./img/jumbo.png" alt="">
             </div>
         </div>
 
