--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="./img/logo.svg" alt="">
                 </div>
 
-                <ul class="nav-links flex">
+                <ul class="nav-links txt-white flex">
                     <li>Scarica</li>
                     <li>Perché Discord</li>
                     <li>Nitro</li>
@@ -26,12 +26,24 @@
                 </ul>
 
                 <div class="nav-login flex">
-                    <button class="button">Accedi</button>
+                    <button class="button login-button">Accedi</button>
                 </div>
             </nav>
 
             <div class="jumbotron-container flex">
-                <img class="jumbotron" src="./img/jumbo.png" alt="">
+                <div class="header-txt-container boxed flex">
+                    <h1 class="main-title txt-white">Il tuo posto per parlare</h1>
+                    <p class="main-paragraph txt-white">Che tu faccia parte di un club scolastico, gruppo di gamer,
+                        comunità artistica
+                        mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
+                        assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                  <div>
+                    <button class="button bigger-button">&DownArrow; Scarica per Mac</button>
+                    <button class="button txt-white bigger-button open-brw">Apri Discord nel tuo browser</button>
+                  </div>      
+
+                </div>
+                <!-- <img class="jumbotron" src="./img/jumbo.png" alt=""> -->
             </div>
         </div>
 
@@ -40,22 +52,31 @@
     <main>
         <section class="section-row">
             <div class="boxed flex">
-                <div class="large-column border"></div>
-                <div class="small-column border"></div>
+                <div class="image-column">
+                    <img src="./img/item1.svg" alt="">
+                </div>
+                <div class="text-column">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in
+                        canali tematici in cui puoi collaborare,
+                        condividere o semplicemente parlare
+                        della tua giornata senza intasare una
+                        chat di gruppo.</p>
+                </div>
             </div>
         </section>
 
         <section class="bg-grey section-row">
             <div class="flex boxed">
-                <div class="small-column border"></div>
-                <div class="large-column border"></div>
+                <div class="text-column border"></div>
+                <div class="image-column border"></div>
             </div>
         </section>
 
         <section class="section-row">
             <div class="flex boxed">
-                <div class="large-column border"></div>
-                <div class="small-column border"></div>
+                <div class="image-column border"></div>
+                <div class="text-column border"></div>
             </div>
         </section>
 
