--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             </nav>
 
             <div class="jumbotron-container flex">
-                <div class="header-txt-container boxed flex">
+                <div class="header-txt-container flex-column boxed">
                     <h1 class="main-title txt-white">Il tuo posto per parlare</h1>
                     <p class="main-paragraph txt-white">Che tu faccia parte di un club scolastico, gruppo di gamer,
                         comunità artistica
                         mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
                         assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                  <div>
-                    <button class="button bigger-button">&DownArrow; Scarica per Mac</button>
-                    <button class="button txt-white bigger-button open-brw">Apri Discord nel tuo browser</button>
-                  </div>      
+                    <div>
+                        <button class="button bigger-button">&DownArrow; Scarica per Mac</button>
+                        <button class="button txt-white bigger-button black-button">Apri Discord nel tuo
+                            browser</button>
+                    </div>
 
                 </div>
-                <!-- <img class="jumbotron" src="./img/jumbo.png" alt=""> -->
             </div>
         </div>
 
@@ -51,12 +51,12 @@
 
     <main>
         <section class="section-row">
-            <div class="boxed flex">
+            <div class="boxed flex column-space">
                 <div class="image-column">
-                    <img src="./img/item1.svg" alt="">
+                    <img class="img-w-100" src="./img/item1.svg" alt="">
                 </div>
-                <div class="text-column">
-                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <div class="text-column flex-column ">
+                    <h2 class="title">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzati in
                         canali tematici in cui puoi collaborare,
                         condividere o semplicemente parlare
@@ -67,16 +67,36 @@
         </section>
 
         <section class="bg-grey section-row">
-            <div class="flex boxed">
-                <div class="text-column border"></div>
-                <div class="image-column border"></div>
+            <div class="boxed flex column-space">
+                <div class="text-column">
+                    <h2 class="title">Dove trovarsi é
+                        facile</h2>
+                    <p>Mettiti comodo in un canale vocale
+                        quando hai tempo. Gli amici nel tuo
+                        server possono vedere che sei lì e unirsi
+                        istantaneamente senza dover chiamare.</p>
+                </div>
+                <div class="image-column">
+                    <img class="img-w-100" src="./img/item2.svg" alt="">
+                </div>
             </div>
         </section>
 
         <section class="section-row">
-            <div class="flex boxed">
-                <div class="image-column border"></div>
-                <div class="text-column border"></div>
+            <div class="flex boxed column-space">
+                <div class="image-column">
+                    <img class="img-w-100" src="./img/item3.svg" alt="">
+                </div>
+                <div class="text-column">
+                    <h2 class="title">Da pochi a un
+                        fandom</h2>
+                        <p>Dai inizio a una community di qualsiasi
+                            dimensione con strumenti di
+                            moderazione e accesso ai membri
+                            personalizzabile. Concedi ai membri
+                            poteri speciali, crea canali privati, e
+                            molto altro.</p>
+                </div>
             </div>
         </section>
 
