--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         <section class="bg-grey section-row">
             <div class="boxed flex column-space">
                 <div class="text-column">
-                    <h2 class="title">Dove trovarsi é
-                        facile</h2>
+                    <h2 class="title">Dove trovarsi é facile</h2>
                     <p>Mettiti comodo in un canale vocale
                         quando hai tempo. Gli amici nel tuo
                         server possono vedere che sei lì e unirsi
@@ -88,20 +87,34 @@
                     <img class="img-w-100" src="./img/item3.svg" alt="">
                 </div>
                 <div class="text-column">
-                    <h2 class="title">Da pochi a un
-                        fandom</h2>
-                        <p>Dai inizio a una community di qualsiasi
-                            dimensione con strumenti di
-                            moderazione e accesso ai membri
-                            personalizzabile. Concedi ai membri
-                            poteri speciali, crea canali privati, e
-                            molto altro.</p>
+                    <h2 class="title">Da pochi a un fandom</h2>
+                    <p>Dai inizio a una community di qualsiasi
+                        dimensione con strumenti di
+                        moderazione e accesso ai membri
+                        personalizzabile. Concedi ai membri
+                        poteri speciali, crea canali privati, e
+                        molto altro.</p>
                 </div>
             </div>
         </section>
 
         <section class="bg-grey section-row">
-            <div class="boxed border green-box"></div>
+            <div class="boxed">
+                <div class="">
+                    <h2 class="title centered-txt">Tecnologia affidabile per tenersi in contatto</h2>
+                    <p class="centered-txt">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella
+                        stessa stanza. Fai ciao in video, guardagli amici giocare in streaming, 0 riunitevi in una
+                        sessione di disegno con la condivisione schermo.
+                    </p>
+                </div>
+                <div>
+                    <img class="img-w-100" src="./img/item4-big.svg" alt="">
+                </div>
+                <div class="star-bg">
+                    <h2 class="smaller-title centered-txt ">Pronto a iniziare la tua avventura?</h2>
+                </div>
+                
+            </div>
         </section>
 
     </main>
