aggiunto button a fine body

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
                 <div class="star-bg">
                     <h2 class="smaller-title centered-txt ">Pronto a iniziare la tua avventura?</h2>
                 </div>
-                
+                <div class="flex">
+                    <button class="button bigger-button blue-button txt-white">&DownArrow; Scarica per Mac</button>
+                </div>
             </div>
         </section>
 
