aggiunta una parte di footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="star-bg">
                     <h2 class="smaller-title centered-txt ">Pronto a iniziare la tua avventura?</h2>
                 </div>
-                <div class="flex">
+                <div class="flex flex-center">
                     <button class="button bigger-button blue-button txt-white">&DownArrow; Scarica per Mac</button>
                 </div>
             </div>
@@ -124,12 +124,52 @@
     <footer>
         <div class="boxed">
             <div class="top-footer flex">
-                <div class="left-footer border"></div>
-                <div class="right-footer border flex">
-                    <div class="footer-column border"></div>
-                    <div class="footer-column border"></div>
-                    <div class="footer-column border"></div>
-                    <div class="footer-column border"></div>
+                <div class="left-footer">
+                    <div class="w-80">
+                        <h2 class="footer-title">Il tuo posto per parlare</h2>
+                        <p class="txt-white txt-small"><img class="img-flag" src="./img/ita.png" alt="">Italiano</p>
+                    </div>
+                </div>
+                <div class="right-footer flex">
+                    <div class="footer-column">
+                        <h3 class="footer-mini-title txt-small">Prodotto</h3>
+                        <p class="txt-white txt-small">Scarica</p>
+                        <p class="txt-white txt-small">Perché Discord</p>
+                        <p class="txt-white txt-small">Nitro</p>
+                        <p class="txt-white txt-small">Sicurezza</p>
+                        <p class="txt-white txt-small">Assistenza</p>
+                    </div>
+                    <div class="footer-column">
+                        <h3 class="footer-mini-title txt-small">Compagnia</h3>
+                        <p class="txt-white txt-small">Chi siamo</p>
+                        <p class="txt-white txt-small">Lavora con noi</p>
+                        <p class="txt-white txt-small">Marchio</p>
+                        <p class="txt-white txt-small">Redazione</p>
+                        <p class="txt-white txt-small">Negozio</p>
+                    </div>
+                    <div class="footer-column">
+                        <h3 class="footer-mini-title txt-small">Risorse</h3>
+                        <p class="txt-white txt-small">Scarica</p>
+                        <p class="txt-white txt-small">Perché Discord</p>
+                        <p class="txt-white txt-small">Nitro</p>
+                        <p class="txt-white txt-small">Sicurezza</p>
+                        <p class="txt-white txt-small">Assistenza</p>
+                        <p class="txt-white txt-small">Scarica</p>
+                        <p class="txt-white txt-small">Perché Discord</p>
+                        <p class="txt-white txt-small">Nitro</p>
+                        <p class="txt-white txt-small">Sicurezza</p>
+                        <p class="txt-white txt-small">Assistenza</p>
+                        <p class="txt-white txt-small">Assistenza</p>
+                    </div>
+                    <div class="footer-column">
+                        <h3 class="footer-mini-title txt-small">Norme</h3>
+                        <p class="txt-white txt-small">Scarica</p>
+                        <p class="txt-white txt-small">Perché Discord</p>
+                        <p class="txt-white txt-small">Nitro</p>
+                        <p class="txt-white txt-small">Sicurezza</p>
+                        <p class="txt-white txt-small">Assistenza</p>
+                    </div>
+
                 </div>
             </div>
         </div>
