agiunta parte finale footer

--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
         <div class="boxed">
             <div class="top-footer flex">
                 <div class="left-footer">
-                    <div class="w-80">
-                        <h2 class="footer-title">Il tuo posto per parlare</h2>
+                        <h2 class="footer-title w-80">Il tuo posto per parlare</h2>
                         <p class="txt-white txt-small"><img class="img-flag" src="./img/ita.png" alt="">Italiano</p>
-                    </div>
                 </div>
                 <div class="right-footer flex">
                     <div class="footer-column">
@@ -169,14 +167,15 @@
                         <p class="txt-white txt-small">Sicurezza</p>
                         <p class="txt-white txt-small">Assistenza</p>
                     </div>
-
                 </div>
             </div>
         </div>
-        <div class="line"></div>
+        <div class="boxed line"></div>
         <div class="bottom-footer flex boxed">
-            <div class="footer-logo border">logo</div>
-            <div class="footer-button border">button</div>
+            <div class="footer-logo">
+                <img src="./img/logo.svg" alt="">
+            </div>
+            <button class="button blue-button txt-white">Registarti</button>
         </div>
 
     </footer>
