--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>htmlcss-struttura-discord</title>
+    <title>htmlcss-discord</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -14,19 +14,19 @@
         <div class="nav-box">
             <nav class="header-nav boxed flex">
                 <div class="nav-logo flex">
-                    <img src="./img/logo.svg" alt="">
+                    <a href="#"><img src="./img/logo.svg" alt=""></a>
                 </div>
 
                 <ul class="nav-links txt-white flex">
-                    <li>Scarica</li>
-                    <li>Perché Discord</li>
-                    <li>Nitro</li>
-                    <li>Sicurezza</li>
-                    <li>Assistenza</li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
                 </ul>
 
                 <div class="nav-login flex">
-                    <button class="button login-button">Accedi</button>
+                    <button class="button login-button"><a href="#">Accedi</a></button>
                 </div>
             </nav>
 
@@ -38,9 +38,9 @@
                         mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo
                         assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                     <div>
-                        <button class="button bigger-button">&DownArrow; Scarica per Mac</button>
-                        <button class="button txt-white bigger-button black-button">Apri Discord nel tuo
-                            browser</button>
+                        <button class="button bigger-button"><a href="#">&DownArrow; Scarica per Mac</a></button>
+                        <button class="button txt-white bigger-button black-button"><a href="#">Apri Discord nel tuo
+                                browser</a></button>
                     </div>
 
                 </div>
@@ -66,6 +66,7 @@
             </div>
         </section>
 
+        <img class="wave-up" src="./img/wave.svg" alt="">
         <section class="bg-grey section-row">
             <div class="boxed flex column-space">
                 <div class="text-column">
@@ -80,6 +81,7 @@
                 </div>
             </div>
         </section>
+        <img class="wave-down" src="./img/wave.svg" alt="">
 
         <section class="section-row">
             <div class="flex boxed column-space">
@@ -98,6 +100,7 @@
             </div>
         </section>
 
+        <img class="wave-up" src="./img/wave.svg" alt="">
         <section class="bg-grey section-row">
             <div class="boxed">
                 <div class="">
@@ -114,7 +117,8 @@
                     <h2 class="smaller-title centered-txt ">Pronto a iniziare la tua avventura?</h2>
                 </div>
                 <div class="flex flex-center">
-                    <button class="button bigger-button blue-button txt-white">&DownArrow; Scarica per Mac</button>
+                    <button class="button bigger-button blue-button txt-white"><a href="#">&DownArrow; Scarica per
+                            Mac</a></button>
                 </div>
             </div>
         </section>
@@ -125,8 +129,8 @@
         <div class="boxed">
             <div class="top-footer flex">
                 <div class="left-footer">
-                        <h2 class="footer-title w-80">Il tuo posto per parlare</h2>
-                        <p class="txt-white txt-small"><img class="img-flag" src="./img/ita.png" alt="">Italiano</p>
+                    <h2 class="footer-title w-80">Il tuo posto per parlare</h2>
+                    <p class="txt-white txt-small"><img class="img-flag" src="./img/ita.png" alt="">Italiano</p>
                 </div>
                 <div class="right-footer flex">
                     <div class="footer-column">
@@ -175,7 +179,7 @@
             <div class="footer-logo">
                 <img src="./img/logo.svg" alt="">
             </div>
-            <button class="button blue-button txt-white">Registarti</button>
+            <button class="button blue-button txt-white"><a href="#">Registarti</a></button>
         </div>
 
     </footer>
